# TripleM

./: .gitignore  Cargo.toml  README.md  test_moods.sh
AI/: architecture.md  bpm_research_and_architecture.md  current_todos.md  research.md  session_state.md
benches/: audio_benchmark.rs
docs/: INTEGRATION_ARCHITECTURE.md  INTEGRATION_INTERFACES.md
src/: config.rs  error.rs  lib.rs
src/audio/: additive.rs  buffer.rs  crossfade.rs  drums.rs  filters.rs  granular.rs  mixer.rs  mod.rs  pattern_translator.rs  pipeline.rs  synthesis.rs  transition.rs  unified_controller.rs  unified_synth.rs  variation.rs  voice_coordination.rs  wavetables.rs
src/generators/: active_ambient.rs  edm_style.rs  environmental.rs  gentle_melodic.rs  mod.rs
src/patterns/: genetic.rs  harmony.rs  markov.rs  melody.rs  mod.rs  multi_scale_rhythm.rs  rhythm.rs  unified_harmony.rs  unified_melody.rs  unified_rhythm.rs
